# RayBoy

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: animation.cc  animation.hh  animation.tcc  audio.cc  audio.hh  blit_render_stage.cc  blit_render_stage.hh  camera.cc  camera.hh  compute_pipeline.cc  compute_pipeline.hh  context.cc  context.hh  depth.frag  depth.vert  device.cc  device.hh  ecs.cc  ecs.hh  emulator.cc  emulator.hh  emulator_render_stage.cc  emulator_render_stage.hh  emulator_transform.comp  environment_map.cc  environment_map.hh  error.cc  error.hh  fancy_render_pipeline.cc  fancy_render_pipeline.hh  forward.frag  forward.vert  forward_render_stage.cc  forward_render_stage.hh  forward_rt.frag  game.cc  game.hh  gather.frag  gbuffer.frag  gbuffer.vert  (+71 more)
